# cloud-access-manager

./: .gitignore  CHANGELOG_SUMMARY.md  DEVELOPING.md  README.md  backend.hcl  environment.auto.tfvars  gitdiff.txt  mkdocs.yml  saas.env.example
apps-script/: Code.gs  GeminiRoleAdvisor.gs  README.md  RoleAdvisor.html  appsscript.json  script-properties.json
cloud-run/: .env.example  .flake8  Dockerfile  README.md  pyproject.toml
cloud-run/app/: ai_advisor.py  constants.py  google_group_collector.py  iam_executor.py  iam_policy_collector.py  main.py  models.py  principal_collector.py  repository.py  requirements.txt  resource_inventory_collector.py  role_translator.py  scope_validator.py
cloud-run/app/templates/: RoleAdvisor.html
cloud-run/app/tests/: conftest.py  test_api.py  test_collectors_flow.py  test_iam_executor.py  test_jobs.py  test_main_execute_flow.py  test_main_revoke_flow.py  test_scope_validator.py
docs/: architecture-review.md  bigquery_tables.md  bulk-request-workflow-plan.md  data_lineage_and_mapping.md  future-design-plans.md  iam-reconciliation-and-incident-flow.md  index.md  operations-runbook.md  requirements.md  review-workflow-policy.md  untested-items-handover.md  user-guide.md
scripts/: README.md  bootstrap-deploy.sh  bootstrap-tfstate.sh  collect-google-groups.sh  collect-iam-policies.sh  collect-principals.sh  collect-resource-inventory.sh  onboard-tenant.sh  sync-config.sh  teardown.sh
sql/: 001_tables.sql  002_views.sql  003_reconciliation.sql  004_workbook_tables.sql  005_workbook_views.sql  006_matrix_pivot.sql  README.md  (+2 more)
(+36 files in other folders)
