[tool.poetry]
name = "iam-access-executor"
version = "0.1.0"
description = "Cloud Run service for IAM Access Management"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "==3.1.0"
google-cloud-bigquery = "==3.35.1"
google-cloud-asset = "==3.30.1"
google-api-python-client = "==2.169.0"
gunicorn = "==23.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^26.3.1"
flake8 = "^7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
